Tela home quase finalizada, preciso ajustar a parte de sugestões

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase": "^10.14.1",
     "hls.js": "^1.6.15",
+    "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-player": "^2.16.0",
